# better-auth

./: .gitignore  Cargo.toml  test.sh
src/: config.rs  logging.rs  macros.rs  main.rs  routes.rs  server.rs  tiny_server.rs  token_manager.rs  user_manager.rs
static/: login.html
