[package]
name = "auth_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.12", features = ["derive"]}
dirs = "4.0.0"
merge = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
rolling-file = "0.1.0"
rpassword = "6.0.1"
rand = "0.8.5"
bcrypt = "0.12.1"
time = "0.2.25"
tide = "0.16.0"
async-std = { version = "1.11.0", features = ["attributes"] }